Utilidades responsivas con Bootstrap

--- a/index.html
+++ b/index.html
@@ -22,20 +22,21 @@
         <h1>Header</h1>
       </div>
     </header>
-    <div class="container-fluid">
+    <div class="container">
       <section class="main row">
         <article class="col-xs-12 col-sm-8 col-md-9 col-md-9">
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque at ipsum augue. Aliquam tincidunt euismod dolor, eu ornare tellus efficitur quis. Fusce vitae suscipit arcu. Ut sed nisi eros. Phasellus sed enim nisi. Nam a porttitor nisi. Donec commodo in orci a fringilla.
           </p>  
         </article>
-        <aside class="col-xs-12 col-sm-4 col-md-3 col-md-3">
+
+        <aside class="visible-md visible-lg col-xs-12 col-sm-4 col-md-3">
           <p>
-            Todos los plugins JavaScript de Bootstrap (también puedes
-          incluir archivos JavaScript individuales de los únicos
-          plugins que utilices)
+            <h3>Sidebar</h3>
+            Todos los plugins JavaScript de Bootstrap (también puedes incluir archivos JavaScript individuales de los únicos plugins que utilices)
           </p>
         </aside>
+
       </section>
       <div class="row">
         <div class="color1 col-xs-12 col-sm-6 col-md-3">
